--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-pollster = "0.4.0"
+anyhow = "1.0.100"
+futures = "0.3"
 wgpu = "27.0.1"
 winit = "0.30.12"
