--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+bytemuck = { version = "1.24.0", features = [ "derive" ] }
 futures = "0.3"
 wgpu = "27.0.1"
 winit = "0.30.12"
