--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ bytemuck = { version = "1.24.0", features = [ "derive" ] }
 futures = "0.3"
 wgpu = "27.0.1"
 winit = "0.30.12"
+
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
+
